--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -5,9 +5,9 @@
   <input id="new-hero" #heroName />
 
   <!-- (click) passes input value to add() and then clears the input -->
-  <button type="button" class="add-button" (click)="add(heroName.value); heroName.value=''">
+  <!--<<button type="button" class="add-button" (click)="add(heroName.value); heroName.value=''">
     Add hero
-  </button>
+  </button>-->
 </div>
 
 <ul class="heroes">
@@ -15,7 +15,7 @@
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
     </a>
-    <button type="button" class="delete" title="delete hero"
-      (click)="delete(hero)">x</button>
+    <!--<button type="button" class="delete" title="delete hero"
+    (click)="delete(hero)">x</button>-->
   </li>
 </ul>
