Nombre de los heroes mostrado en pantalla

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,18 +1,15 @@
- <div class="container" *ngIf="!showSearchResult">
+<div class="container" *ngIf="!showSearchResult">
+
   <h2>Top Heroes</h2>
+  <app-hero-search></app-hero-search>
   <div class="heroes-menu">
     <a *ngFor="let hero of heroes"
        routerLink="/detail/{{hero.id}}">
       {{hero.name}}
-    </a>
-    <div class="card">
       <!--<img src="{{heroes.thumbnail.path +'/standard_medium.'+heroes.thumbnail.extension}}" width="100%" class="card-img-top" alt="Some Issue Loading Image..." />-->
-      <div class="card-body">
-        <h5 class="card-title">{{ heroes.name }}</h5>
-      </div>
-    </div>
+      <!--<img class="img-heroes" src="{{hero.thumbnail.path}}.{{hero.thumbnail.extension}}" style="height: 150px">-->
+    </a>
   </div>
 
-  <app-hero-search></app-hero-search>
- </div>
+</div>
 
